# ftg_mxck

./: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CHECKLIST.md  AUDIT_MXCK_FTG.md  AUDIT_REPORT.md  DEPENDENCY_CHECKLIST.md  GEOMETRY_TF_ANALYSIS.md  GIT_SETUP_THM.md  HowTo_MXCK.md  JETSON_TEST_RUNBOOK.md  Kopieren auf den Jetson.txt  LAUNCH_GRAPH_CHECK.md  Logs280326.txt  MXCK_CARKIT_UEBERGABE_DOKU.md  Optimierung Schritte.txt  README.md  RISK_REGISTER.md  SYSTEM_DOCUMENTATION.md  Sauper Plan.txt  TECHNICAL_FIX_SUMMARY.md  TEST_READINESS_CHECKLIST.md  TOPIC_INTERFACE_CHECK.md
.github/: copilot-instructions.md
.github/workflows/: build-and-commit-pdf.yml
docs/: FTG_Praesentation.pptx  README.md
docs/Projektarbeit_MXCK_FTG/: .gitignore  main.tex
docs/Projektarbeit_MXCK_FTG/chapters/: 01_grundlagen.tex  02_durchfuehrung.tex  03_diskussion.tex  04_fazit.tex
docs/projektarbeit/: README.md
docs/projektarbeit/.github/workflows/: build-and-commit-pdf.yml
docs/projektarbeit/Projektarbeit_MXCK_FTG/: .gitignore
docs/projektarbeit/Projektarbeit_MXCK_FTG/chapters/: 01_grundlagen.aux  01_grundlagen.tex  02_durchfuehrung.aux  02_durchfuehrung.tex  03_diskussion.aux  03_diskussion.tex  04_fazit.aux
follow_the_gap_v0/: Befehle_ftg.txt  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
follow_the_gap_v0/config/: follow_the_gap_v0.yaml
follow_the_gap_v0/include/follow_the_gap_v0/: corner.hpp  follow_the_gap.hpp  gap.hpp  lidar_data.hpp  obstacle.hpp
follow_the_gap_v0/launch/: follow_the_gap_v0.launch.py
follow_the_gap_v0/src/: corner.cpp  follow_the_gap.cpp  follow_the_gap.h  gap.cpp  lidar_data.cpp  main.cpp  obstacle.cpp
ftg_mxck/: Kopieren auf den Jetson.txt  Optimierung Schritte.txt  Sauper Plan.txt
ftg_mxck/mxck_ftg_bringup/: Tasks.txt  package.xml  setup.cfg  setup.py
ftg_mxck/mxck_ftg_bringup/launch/: ftg_full_system.launch.py  ftg_stack.launch.py
ftg_mxck/mxck_ftg_control/: Ausgabe.txt  Tasks.txt  setup.cfg
ftg_mxck/mxck_ftg_control/launch/: ftg_command.launch.py
ftg_mxck/mxck_ftg_perception/: Lunch Befehle_perception.txt  package.xml  setup.cfg  setup.py  tasks.txt
ftg_mxck/mxck_ftg_perception/config/: scan_front_window_check.yaml  scan_preprocessor.yaml
ftg_mxck/mxck_ftg_perception/launch/: scan_front_window_check.launch.py  scan_preprocessor.launch.py  stage2_perception.launch.py
ftg_mxck/mxck_ftg_perception/mxck_ftg_perception/: common.py  scan_front_window_check.py  scan_preprocessor_node.py
ftg_mxck/mxck_ftg_planner/: package.xml  setup.cfg  setup.py  tasks.txt
ftg_mxck/mxck_ftg_planner/config/: ftg_planner.yaml
ftg_mxck/mxck_ftg_planner/launch/: ftg_planner.launch.py
ftg_mxck/mxck_ftg_planner/mxck_ftg_planner/: common.py  ftg_planner_node.py
line_tracking-Stack_Beispiel Code/: Readme.md
line_tracking-Stack_Beispiel Code/line_tracking/: package.xml  setup.cfg
line_tracking-Stack_Beispiel Code/line_tracking/config/: params.yaml
line_tracking-Stack_Beispiel Code/line_tracking/launch/: line_tracking_launch.py
line_tracking-Stack_Beispiel Code/line_tracking/line_tracking/: controller_node.py  data_recorder_node.py  lane_detector_cnn_node.py  lane_detector_node.py  obstacle_detector_node.py  pure_pursuit_node.py
line_tracking-Stack_Beispiel Code/line_tracking/line_tracking/utils/: controller.py  image_processing.py  lanenet.onnx
mxck_ftg_bringup/: CHANGELOG.md  README.md  Tasks.txt  package.xml  setup.cfg  setup.py
mxck_ftg_bringup/config/: ftg_scan_path.yaml
mxck_ftg_bringup/launch/: ftg_full_system.launch.py  ftg_scan_path.launch.py  ftg_stack.launch.py
mxck_ftg_control/: Ausgabe.txt  README.md  Tasks.txt  package.xml  setup.cfg  setup.py
mxck_ftg_control/config/: ftg_control.yaml
mxck_ftg_control/launch/: ftg_command.launch.py
mxck_ftg_control/mxck_ftg_control/: ftg_command_node.py
mxck_ftg_control/test/: test_flake8.py
mxck_ftg_perception/: CHANGELOG.md  Lunch Befehle_perception.txt  README.md  package.xml  setup.cfg  setup.py  tasks.txt
mxck_ftg_perception/config/: scan_front_window_check.yaml  scan_preprocessor.yaml
mxck_ftg_perception/launch/: scan_front_window_check.launch.py  scan_preprocessor.launch.py  stage2_perception.launch.py
mxck_ftg_perception/mxck_ftg_perception/: common.py  scan_front_window_check.py  scan_preprocessor_node.py
mxck_ftg_planner/: README.md  package.xml  setup.cfg  setup.py  tasks.txt
mxck_ftg_planner/config/: ctu_ftg_adapter.yaml  ftg_planner.yaml
mxck_ftg_planner/launch/: ctu_adapter.launch.py  ftg_planner.launch.py
mxck_ftg_planner/mxck_ftg_planner/: common.py  ctu_ftg_adapter_node.py  ftg_planner_node.py
obstacle_substitution/: CHANGELOG.md  package.nom  package.xml  setup.py
obstacle_substitution/launch/: start.launch  start.launch.py
obstacle_substitution/obstacle_substitution/: launchers.py  obstacle_substitution_node.py
