<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_the_gap_v0</name>
  <version>0.2.5</version>
  <description>
    Legacy CTU Follow-The-Gap implementation ported to ROS 2.
    This package currently consumes /obstacles and publishes /final_heading_angle,
    /gap_found, and debug visualization topics.
  </description>

  <maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>
  <author email="anderssp1994@gmail.com">Anders Solberg Pedersen</author>
  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <!--
    License note:
    The original source headers, README and LICENSE file in this package state GPLv3.
    package.xml previously said Apache-2.0, which conflicted with the repository files.
    This cleanup aligns package.xml with the source tree.
  -->
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>obstacle_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
