<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mxck_ftg_bringup</name>
  <version>0.1.0</version>
  <description>MXCarkit FTG bringup for CTU follow_the_gap_v0 with MXCarkit adapter and Ackermann output.</description>

  <maintainer email="omar@example.com">Omar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>mxck_run</exec_depend>
  <exec_depend>mxck_ftg_perception</exec_depend>
  <exec_depend>mxck_ftg_planner</exec_depend>
  <exec_depend>mxck_ftg_control</exec_depend>
  <exec_depend>obstacle_substitution</exec_depend>
  <exec_depend>follow_the_gap_v0</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
