<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mxck_ftg_bringup</name>
  <version>0.2.0</version>
  <description>
    Bringup package for the MXCK FTG stack.
    Starts the standard scan-based FTG path:
    scan_preprocessor -> follow_the_gap_v0(scan) -> ftg_planner_node -> ftg_command_node.
  </description>

  <maintainer email="omar@example.com">Omar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>mxck_ftg_perception</exec_depend>
  <exec_depend>follow_the_gap_v0</exec_depend>
  <exec_depend>mxck_ftg_planner</exec_depend>
  <exec_depend>mxck_ftg_control</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
